chat 기능쪽 setter 제거후 builder로 변경 및 service쪽 인터페이스와 구현체 분리작업